gccida/c3/bitmap_element_allocate
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_element_allocate/src/bitmap.c:583:12: error: expected expression
*( _OWORD *)result->bits = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_element_allocate/src/bitmap.c:583:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result->bits = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/bitmap_element_allocate/src/obj/bitmap.o] Error 1
